make top_controller/routing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
+
+
+<!-- 追記した部分 -->
+<html lang="ja">
+  <head>
+     <meta charset="UTF-8">
+     <title>COYU</title>
+     <meta name="viewport" content="width=device-width">
+     <link href='http://fonts.googleapis.com/css?family=Paytone+One' rel='stylesheet' type='text/css'>
+     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
+     <link rel="stylesheet" href="style.css">
+
+
+<!-- 元からある -->
   <title>Handmade</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+
+
 </head>
 <body>
 
