--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,20 +10,38 @@
      <link href='http://fonts.googleapis.com/css?family=Paytone+One' rel='stylesheet' type='text/css'>
      <link href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
      <link rel="stylesheet" href="style.css">
+     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+     <%= csrf_meta_tags %>
+  </head>
+
+  <body>
 
 
-<!-- 元からある -->
-  <title>Handmade</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+<!-- bootstrapのコマンド後で調べる -->
+
+  <script type='text/javascript' charset='utf-8'>
+  $(function(){
+    $.material.init();
+  });
+  </script>
+  
 
 
+  <!-- common/_header.html.erb部分テンプレート呼び出し -->
+<%= render partial: 'common/header' %>
 
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+<div class='container'>
+  <div class='row'>
+    <div class='col-lg-12'>
+      <%= bootstrap_flash %>
+      <%= yield %>
+    </div>
+  </div>
+     <footer class='row text-center'>
+       <p>(C) coyu 2016 </p>
+     </footer>
+</div>
+  
+  </body>
 </html>
